Update TestSuiteBase.java